--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -21,8 +21,8 @@
       <th>Opções</th>
     </tr>
   </thead>
-  <tbody *ngFor="let evento of eventos">
-    <tr>
+  <tbody>
+    <tr *ngFor="let evento of eventos">
       <td>{{evento.eventoId}}</td>
       <td>{{evento.imgEvento}}</td>
       <td>{{evento.tema}}</td>
