--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -21,7 +21,7 @@
       <th>Opções</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody *ngIf="eventos && eventos.lenght">
     <tr *ngFor="let evento of eventos">
       <td>{{evento.eventoId}}</td>
       <td>{{evento.imgEvento}}</td>
