--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -12,7 +12,10 @@
   <thead class="thead-dark">
     <tr>
       <th>#</th>
-      <th>Imagem</th>
+      <th>
+        <button type="button" class="btn btn-outline-light btm-sm"
+        (click) = "alterImage()">Mostrar</button>
+      </th>
       <th>Tema</th>
       <th>Local</th>
       <th>Data</th>
@@ -24,7 +27,13 @@
   <tbody *ngIf="eventos && eventos.length">
     <tr *ngFor="let evento of eventos">
       <td>{{evento.eventoId}}</td>
-      <td>{{evento.imgEvento}}</td>
+      <td>
+        <img *ngIf="showImage" src="/assets/{{evento.imgEvento}}"
+        [style.width.px]="widthImg"
+        [style.margin.px]="marginImg"
+        >
+
+      </td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
       <td>{{evento.dataEvento}}</td>
