Ajuste estrutura de tabela

--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -44,7 +44,7 @@
       <td>{{evento.local}}</td>
       <td>{{evento.dataEvento}}</td>
       <td>{{evento.qtPessoas}}</td>
-      <td>{{evento.lote}}</td>
+      <td>{{evento.lotes[0].nome}}</td>
       <td>
           <button type="button" class="btn btn-primary btn-sm mr-2">Editar</button>
           <button type="button" class="btn btn-danger btn-sm">Excluir</button>
