Alterar com inserção de imagem nos botões

--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -19,7 +19,10 @@
     <tr>
       <th>
         <button type="button" class="btn btn-outline-light btm-sm"
-        (click) = "alterImage()">{{!showImage? 'Exibir': 'Ocultar'}}</button>
+          (click) = "alterImage()">
+          <i class="{{!showImage ? 'fa fa-eye': 'fa fa-eye-slash'}}"></i>
+          {{!showImage ? 'Exibir': 'Ocultar'}}
+        </button>
       </th>
       <th>#</th>
       <th>Tema</th>
@@ -46,8 +49,12 @@
       <td>{{evento.qtPessoas}}</td>
       <td>{{evento.lotes[0].nome}}</td>
       <td>
-          <button type="button" class="btn btn-primary btn-sm mr-2">Editar</button>
-          <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+          <button type="button" class="btn btn-primary btn-sm mr-2">
+            <i class="fa fa-edit"></i>
+          </button>
+          <button type="button" class="btn btn-danger btn-sm">
+            <i class="fa fa-trash"></i>
+          </button>
       </td>
     </tr>
   </tbody>
