--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -49,10 +49,10 @@
       <td>{{evento.qtPessoas}}</td>
       <td>{{evento.lotes[0].nome}}</td>
       <td>
-          <button type="button" class="btn btn-primary btn-sm mr-2">
+          <button type="button" class="btn btn-primary btn-sm mr-2" tooltip="Editar">
             <i class="fa fa-edit"></i>
           </button>
-          <button type="button" class="btn btn-danger btn-sm">
+          <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
             <i class="fa fa-trash"></i>
           </button>
       </td>
@@ -66,3 +66,12 @@
     </tr>
   </tfoot>
 </table>
+
+<!-- Código Modal -->
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Confirma a deleção desse evento?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
+    <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
+  </div>
+</ng-template>
