--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,6 +1,4 @@
-<h2>Eventos</h2>
-<hr>
-
+<app-titulo [titulo]="'Eventos'"></app-titulo>
 <div action="" class="form-inline">
   <div class="form-group mb-2">
     <label class="mr-2">Filtro: </label>
