--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,75 +1,5 @@
-<app-titulo [titulo]="'Eventos'"></app-titulo>
-<div action="" class="form-inline">
-  <div class="form-group mb-2">
-    <label class="mr-2">Filtro: </label>
-    <input
-      type="text"
-      class="form-control mr-2"
-      placeholder="buscar"
-      [(ngModel)]="listFilter">
-  </div>
-</div>
-
-<!-- <h3>Filtro: {{listFilter}}</h3> -->
-
-<table class="table table-striped">
-  <thead class="thead-dark">
-    <tr>
-      <th>
-        <button type="button" class="btn btn-outline-light btm-sm"
-          (click) = "alterImage()">
-          <i class="{{!showImage ? 'fa fa-eye': 'fa fa-eye-slash'}}"></i>
-          {{!showImage ? 'Exibir': 'Ocultar'}}
-        </button>
-      </th>
-      <th>#</th>
-      <th>Tema</th>
-      <th>Local</th>
-      <th>Data</th>
-      <th>Qtd Pessoas</th>
-      <th>Lote</th>
-      <th>Opções</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="eventos && eventos.length">
-    <tr *ngFor="let evento of eventosFiltred">
-      <td>
-        <img [collapse]="showImage"
-             [isAnimated]="true"
-             src="/assets/{{evento.imgEvento}}"
-        [style.width.px]="widthImg"
-        [style.margin.px]="marginImg">
-      </td>
-      <td>{{evento.id}}</td>
-      <td>{{evento.tema}}</td>
-      <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento | DateFormatPipe}}</td>
-      <td>{{evento.qtPessoas}}</td>
-      <td>{{evento.lotes[0].nome}}</td>
-      <td>
-          <button type="button" class="btn btn-primary btn-sm mr-2" tooltip="Editar">
-            <i class="fa fa-edit"></i>
-          </button>
-          <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
-            <i class="fa fa-trash"></i>
-          </button>
-      </td>
-    </tr>
-  </tbody>
-  <tfoot *ngIf="!eventos.length">
-    <tr>
-      <td colspan="8" class="text-center">
-        <h4>Nenhum evento encontrado</h4>
-      </td>
-    </tr>
-  </tfoot>
-</table>
-
-<!-- Código Modal -->
-<ng-template #template>
-  <div class="modal-body text-center">
-    <p>Confirma a deleção desse evento?</p>
-    <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
-    <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
-  </div>
-</ng-template>
+<app-titulo [titulo]="'Eventos'"
+            [iconClass]="'fa fa-calendar-alt'"
+            [botaoListar]="true">
+</app-titulo>
+<router-outlet></router-outlet>
