--- a/Front/ProEventos-App/src/app/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/nav/nav.component.html
@@ -8,7 +8,7 @@
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body class="p-3 m-0 border-0 bd-example">
+  <body class="p-3 m-0 border-0 bd-example bg-white shadow-sm">
 
     <!-- Example Code -->
 
@@ -21,7 +21,7 @@
         <div class="navbar-collapse collapse" [collapse]="isCollapsed" [isAnimated]="true" id="navbarNav">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" aria-current="page" routerLink="eventos">Eventos</a>
+              <a class="nav-link" aria-current="page" routerLink="eventos/lista">Eventos</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
               <a class="nav-link" routerLink="palestrantes">Palestrantes</a>
@@ -38,7 +38,7 @@
                 Carlos
               </a>
               <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" routerLink="perfil">
+                <a class="dropdown-item" routerLink="user/perfil">
                   Perfil
                 </a>
                 <div role="separator" class="divider"></div>
