--- a/Front/ProEventos-App/src/app/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/nav/nav.component.html
@@ -8,13 +8,15 @@
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body class="p-3 m-0 border-0 bd-example bg-white shadow-sm">
+  <body class="p-3 m-0 border-0 bd-example bg-white shadow-sm" *ngIf="showMenu()">
 
     <!-- Example Code -->
 
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" routerLink="dashboard">ProEventos</a>
+        <a class="navbar-brand" routerLink="dashboard">
+          <i class="fa fa-users mb-2"></i>
+        </a>
         <button class="navbar-toggler collapsed" (click)="isCollapsed = !isCollapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,7 +44,7 @@
                   Perfil
                 </a>
                 <div role="separator" class="divider"></div>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" routerLink="user/registration">
                   Sair
                 </a>
               </div>
