--- a/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
+++ b/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
@@ -112,7 +112,7 @@
 				Cancelar Alteração
 			</button>
 			<button class="btn btn-success">
-				<span class="spinner-border spinner-border-sm mr-1"></span>
+				<!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
 				Salvar Alteração
 			</button>
 		</div>
