--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -1,81 +1,110 @@
-  <div class="card rounded shadow-sm">
-<form [formGroup]="form">
-  <div class="p-3">
-    <div class="form-row">
-      <div class="form-group col-md-12">
-        <label>Tema</label>
-        <input type="text" class="form-control is-invalid"
-               [ngClass]="{'is-invalid': f.tema.errors && f.tema.touched}"
-               formControlName="tema"
-               placeholder="Insira o Tema">
-        <div *ngIf="f.tema.errors?.required" class="invalid-feedback">
-          Tema é obrigatório
+<div class="card rounded shadow-sm">
+  <form [formGroup]="form">
+    <!-- <p>Form value: {{form.value | json}}</p>
+    <p>Form value: {{form.status| json}}</p> -->
+    <div class="p-3">
+      <div class="form-row">
+        <div class="form-group col-md-12">
+          <label>Tema</label>
+          <input type="text" class="form-control is-invalid"
+          [ngClass]="{'is-invalid': f.tema.errors && f.tema.touched}"
+          formControlName="tema"
+          placeholder="Insira o Tema">
+          <div *ngIf="f.tema.errors?.required" class="invalid-feedback">
+            Tema é obrigatório
+          </div>
+          <div *ngIf="f.tema.errors?.minlength" class="invalid-feedback">
+            Tema deve ter no mínimo 4 dígitos
+          </div>
+          <div *ngIf="f.tema.errors?.maxlength" class="invalid-feedback">
+            Tema deve ter no máximo 50 dígitos
+          </div>
         </div>
-        <div *ngIf="f.tema.errors?.minlength" class="invalid-feedback">
-          Tema deve ter no mínimo 4 dígitos
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-8">
+          <label>Local</label>
+          <input type="text" class="form-control"
+          [ngClass]="{'is-invalid': f.local.errors && f.local.touched}"
+          formControlName="local"
+          placeholder="">
+          <div *ngIf="f.local.errors?.required && f.local.touched" class="invalid-feedback">
+            Local é obrigatório
+          </div>
         </div>
-        <div *ngIf="f.tema.errors?.maxlength" class="invalid-feedback">
-          Tema deve ter no máximo 50 dígitos
+        <div class="form-group col-md-4">
+          <label>Data e Hora</label>
+          <input type="datetime" class="form-control is-invalid"
+          [ngClass]="{'is-invalid': f.dataEvento.errors && f.dataEvento.touched}"
+          formControlName="dataEvento"
+          placeholder="">
+          <div *ngIf="f.dataEvento.errors?.required && f.dataEvento.touched" class="invalid-feedback">
+            Data e hora são obrigatórios
+          </div>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-2">
+          <label>Qtd Pessoas</label>
+          <input type="number" class="form-control is-invalid"
+          [ngClass]="{'is-invalid': f.qtPessoas.errors && f.qtPessoas.touched}"
+          formControlName="qtPessoas"
+          placeholder="">
+          <div *ngIf="f.qtPessoas.errors?.required && f.qtPessoas.touched" class="invalid-feedback">
+            Quantidade de pessoas é obrigatória
+          </div>
+          <div *ngIf="f.qtPessoas.errors?.max && f.qtPessoas.touched" class="invalid-feedback">
+            Quantidade de pessoas deve ser menor de 120000
+          </div>
+          <div *ngIf="f.qtPessoas.errors?.min && f.qtPessoas.touched" class="invalid-feedback">
+            Quantidade de pessoas deve ser maior que 0
+          </div>
+        </div>
+        <div class="form-group col-md-2">
+          <label>Telefone</label>
+          <input type="text" class="form-control is-invalid"
+          [ngClass]="{'is-invalid': f.telefone.errors && f.telefone.touched}"
+          formControlName="telefone"
+          placeholder="(000) 90000-0000">
+          <div *ngIf="f.telefone.errors?.required && f.telefone.touched" class="invalid-feedback">
+            Telefone é obrigatório
+          </div>
+        </div>
+        <div class="form-group col-md-4">
+          <label>Email</label>
+          <input type="text" class="form-control is-invalid"
+          [ngClass]="{'is-invalid': f.email.errors && f.email.touched}"
+          formControlName="email"
+          placeholder="e-mail">
+          <div *ngIf="f.email.errors?.required && f.email.touched" class="invalid-feedback">
+            E-mail é obrigatório
+          </div>
+          <div *ngIf="f.email.errors?.email && f.email.touched" class="invalid-feedback">
+            E-mail é inválido
+          </div>
+        </div>
+        <div class="form-group col-md-4">
+          <label>Imagem</label>
+          <input type="text" class="form-control is-invalid"
+          [ngClass]="{'is-invalid': f.imgEvento.errors && f.imgEvento.touched}"
+          formControlName="imgEvento"
+          placeholder="imagem">
+          <div *ngIf="f.imgEvento.errors?.required && f.imgEvento.touched" class="invalid-feedback">
+            Imagem é obrigatória
+          </div>
         </div>
       </div>
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-8">
-        <label>Local</label>
-        <input type="text" class="form-control is-invalid" formControlName="local" placeholder="">
-        <div class="invalid-feedback">
-          Local é obrigatório
-        </div>
-      </div>
-      <div class="form-group col-md-4">
-        <label>Data e Hora</label>
-        <input type="datetime" class="form-control is-invalid" formControlName="dataEvento" placeholder="">
-        <div class="invalid-feedback">
-          Data e hora são obrigatórios
-        </div>
+    <div class="card-footer">
+      <div class="d-flex">
+        <button class="btn btn-outline-secondary mr-auto border" (click)="resetForm()">
+          Cancelar Alteração
+        </button>
+        <button class="btn btn-success" [disabled]="!form.valid">
+          <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
+          Salvar Evento
+        </button>
       </div>
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-2">
-        <label>Qtd Pessoas</label>
-        <input type="text" class="form-control is-invalid" formControlName="qtPessoas" placeholder="">
-        <div class="invalid-feedback">
-          Quantidade de pessoas é obrigatória
-        </div>
-      </div>
-      <div class="form-group col-md-2">
-        <label>Telefone</label>
-        <input type="text" class="form-control is-invalid" formControlName="telefone" placeholder="(000) 90000-0000">
-        <div class="invalid-feedback">
-          Telefone é obrigatório
-        </div>
-      </div>
-      <div class="form-group col-md-4">
-        <label>Email</label>
-        <input type="text" class="form-control is-invalid" formControlName="email" placeholder="e-mail">
-        <div class="invalid-feedback">
-          E-mail é obrigatório
-        </div>
-      </div>
-      <div class="form-group col-md-4">
-        <label>Imagem</label>
-        <input type="text" class="form-control is-invalid" formControlName="imgEvento" placeholder="imagem">
-        <div class="invalid-feedback">
-          Imagem é obrigatória
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="card-footer">
-    <div class="d-flex">
-      <button class="btn btn-outline-secondary mr-auto border">
-        Cancelar Alteração
-      </button>
-      <button class="btn btn-success">
-        <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
-        Salvar Evento
-      </button>
-    </div>
-  </div>
-</form>
+  </form>
 </div>
